<resources>
    <string name="app_name">Quiz App</string>
    <string name="question_1">1-What substance are nails made of?</string>
    <string name="question_2">2-With how many bones the human skeletal system is composed of in adult age?</string>
    <string name="question_3">3-Which of the followings are endocrine glands?</string>
    <string name="question_4">4-What is the weight of the human brain?</string>
    <string name="question_5">5-Which acid is secreted from stomach?</string>
    <string name="question_6">6-How many blood groups in the ABO system?</string>
    <string name="question_7">7-Which Body part is this ?</string>
    <string name="question_8">8-what percentage of human body is water ?</string>
    <string name="question_9">9-A Human\'s thumb is as long as his or her nose ?</string>
    <string name="question_10">10-smallest bone in the human body found in ?</string>
    <string name="calcium">Calcium</string>
    <string name="keratin">Keratin</string>
    <string name="thyroid">Thyroid</string>
    <string name="_202">202</string>
    <string name="_256">256</string>
    <string name="_206">206</string>
    <string name="pituitary">Pituitary</string>
    <string name="liver">Liver</string>
    <string name="eg_1_56kg">eg.1.56kg</string>
    <string name="eg_ch3cooh">eg.CH3COOH</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">AB</string>
    <string name="o">O</string>
    <string name="kidney">Kidney</string>
    <string name="heart">Heart</string>
    <string name="brain">Brain</string>
    <string name="_66">66</string>
    <string name="_85">85</string>
    <string name="_70">70</string>
    <string name="_true">True</string>
    <string name="_false">False</string>
    <string name="ear">Ear</string>
    <string name="nose">Nose</string>
    <string name="hand">Hand</string>
    <string name="submit">SUBMIT</string>
    <string name="heart_image">Heart Image</string>
    <string name="non_of_these">Non of These</string>
    <string name="splash_text">Let\'s Do Some Quiz</string>
</resources>
