<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background3"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/size_16dp">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            app:cardCornerRadius="@dimen/size_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_layout_background"
                android:orientation="vertical"
                android:padding="@dimen/size_4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_8dp"
                    android:text="@string/question_1"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calcium" />

                    <RadioButton
                        android:id="@+id/keratin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/keratin" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/non_of_these" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            app:cardCornerRadius="@dimen/size_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_layout_background"
                android:orientation="vertical"
                android:padding="@dimen/size_4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_8dp"
                    android:text="@string/question_2"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_4dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_202" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_256" />

                    <RadioButton
                        android:id="@+id/_206_bone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_206" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            app:cardCornerRadius="@dimen/size_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_layout_background"
                android:orientation="vertical"
                android:padding="@dimen/size_4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_8dp"
                    android:text="@string/question_3"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/thyroid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_4dp"
                    android:text="@string/thyroid" />

                <CheckBox
                    android:id="@+id/kidney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_4dp"
                    android:text="@string/kidney" />

                <CheckBox
                    android:id="@+id/liver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_4dp"
                    android:text="@string/liver" />

                <CheckBox
                    android:id="@+id/pituitary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_4dp"
                    android:text="@string/pituitary" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            app:cardCornerRadius="@dimen/size_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_layout_background"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="@dimen/size_4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_8dp"
                    android:text="@string/question_4"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/weight_of_brain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/eg_1_56kg"
                    android:inputType="text"
                    android:padding="@dimen/size_4dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            android:background="@color/card_layout_background"
            app:cardCornerRadius="@dimen/size_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_layout_background"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="@dimen/size_4dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_8dp"
                    android:text="@string/question_5" />

                <EditText
                    android:id="@+id/acid_from_stomach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/eg_ch3cooh"
                    android:inputType="text"
                    android:padding="@dimen/size_8dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            app:cardCornerRadius="@dimen/size_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_layout_background"
                android:orientation="vertical"
                android:padding="@dimen/size_4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/size_8dp"
                    android:text="@string/question_6"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/blood_group_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_4dp"
                    android:text="@string/a" />

                <CheckBox
                    android:id="@+id/blood_group_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_4dp"
                    android:text="@string/b" />

                <CheckBox
                    android:id="@+id/blood_group_ab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_4dp"
                    android:text="@string/ab" />

                <CheckBox
                    android:id="@+id/blood_group_o"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_4dp"
                    android:text="@string/o" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            android:background="#2611f1da"
            app:cardCornerRadius="@dimen/size_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_layout_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_8dp"
                    android:text="@string/question_7"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#ffffff"
                    android:contentDescription="@string/heart_image"
                    android:src="@drawable/heart" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_4dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kidney" />

                    <RadioButton
                        android:id="@+id/heart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/heart" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brain" />
                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            app:cardCornerRadius="@dimen/size_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_layout_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_8dp"
                    android:text="@string/question_8"
                    android:textStyle="bold" />


                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_4dp">

                    <RadioButton
                        android:id="@+id/water_percent_66"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_66" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_85" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_70" />
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            app:cardCornerRadius="@dimen/size_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_layout_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_8dp"
                    android:text="@string/question_9"
                    android:textStyle="bold" />


                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_4dp">

                    <RadioButton
                        android:id="@+id/_true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_false" />


                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            app:cardCornerRadius="@dimen/size_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_layout_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_8dp"
                    android:text="@string/question_10"
                    android:textStyle="bold" />


                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <RadioButton
                        android:id="@+id/ear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ear" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nose" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hand" />
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/size_16dp"
            android:background="@android:color/holo_blue_dark"
            android:padding="@dimen/size_16dp"
            android:text="@string/submit"
            android:textColor="@color/White" />


    </LinearLayout>


</ScrollView>